# ccc

./: .gitignore  CLAUDE.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-data-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-qlora-training-scaffold/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-curriculum-training-loop/: 03-01-PLAN.md  03-01-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-evaluation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-VERIFICATION.md
.planning/quick/260416-czk-create-uv-installation-and-entrypoint-fo/: 260416-czk-PLAN.md  260416-czk-SUMMARY.md
.planning/research/: SUMMARY.md  clearml-lightning.md  curriculum-learning.md  lightning-qlora.md  qlora-deepseek.md
data/: config.py  curriculum_dataset.py  datamodule.py  dataset.py  fim.py
tests/: conftest.py  test_curriculum.py  test_datamodule.py  test_dataset.py  test_eval_metrics.py  test_fim.py  test_model.py  test_tokenizer.py
training/: config.py  curriculum.py  eval_metrics.py  model.py  tokenizer.py  train.py
